Add .env.example, update .gitignore and README for environment setup

--- a/notebooks/05_Notebook_SimpleChatBot.ipynb
+++ b/notebooks/05_Notebook_SimpleChatBot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "71317d76",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,14 @@
     "from typing import TypedDict\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "from langchain_core.messages import HumanMessage\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langgraph.graph import StateGraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "id": "db5edf69",
    "metadata": {},
    "outputs": [],
@@ -27,34 +28,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "id": "2a27adbc",
    "metadata": {},
    "outputs": [],
    "source": [
     "class State(TypedDict):\n",
-    "    message: str\n",
+    "    messages: list[HumanMessage]\n",
     "    response: str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
+   "id": "44227a26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "2a54a3bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def llm_node(state: State) -> State:\n",
     "    \"\"\"Simple llm node to communicate with the llm model and return the response\"\"\"\n",
-    "    llm = ChatOpenAI(model=\"gpt-3.5-turbo\")\n",
-    "    state[\"response\"] = llm.invoke(state[\"message\"])\n",
-    "    print(state[\"response\"])\n",
+    "    state[\"response\"] = llm.invoke(state[\"messages\"])\n",
     "    return state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "id": "48153e7a",
    "metadata": {},
    "outputs": [],
@@ -65,12 +74,12 @@
     "graph.set_entry_point(\"llm_node\")\n",
     "graph.set_finish_point(\"llm_node\")\n",
     "\n",
-    "app = graph.compile()"
+    "app = graph.compile(debug=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "72f6bda1",
    "metadata": {},
    "outputs": [
@@ -78,12 +87,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Artificial intelligence, a marvel of technology\\nCreated by humans, impacting society\\nAdvancing steadily, evolving with great velocity\\nUnleashing potential, with endless possibility.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 34, 'prompt_tokens': 16, 'total_tokens': 50, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-CIZxLQUn7dpWTGOpYHe5kfOINkpX4', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='run--f72c0b13-0179-44e7-9ed3-c1731dc368e1-0' usage_metadata={'input_tokens': 16, 'output_tokens': 34, 'total_tokens': 50, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "chatgpt: Hello! How can I assist you today?\n",
+      "chatgpt: Thank you! If you have any other requests or questions, feel free to ask.\n",
+      "chatgpt: Thank you! If you have any other requests or questions, feel free to ask.\n",
+      "chatgpt: Is there anything specific you are looking for assistance with?\n",
+      "chatgpt: Is there anything specific you are looking for assistance with?\n"
      ]
     }
    ],
    "source": [
-    "result = app.invoke({\"message\": \"Write a poem about AI in 4 lines\", \"response\": \"\"})"
+    "userMessage = input(\"You: \")\n",
+    "while userMessage != \"exit\":    \n",
+    "    result = app.invoke({\"messages\": [HumanMessage(content=userMessage)]})\n",
+    "    print(f\"chatgpt: {result['response'].content}\")\n",
+    "    userMessage = input(\"You: \")"
    ]
   }
  ],
